# memory-leak-detector

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: sample_report.txt  track_workload.cpp
include/memleak/: Backtrace.hpp  Tracker.hpp
src/: Backtrace.cpp  Overrides.cpp  Tracker.cpp  demo.cpp
tests/: tracker_tests.cpp
